<resources>
    <string name="app_name">USTHWeather</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Interdum velit laoreet id donec ultrices. Diam volutpat commodo sed egestas egestas fringilla. Vestibulum lorem sed risus ultricies tristique nulla aliquet enim tortor. Duis at consectetur lorem donec. Sed tempus urna et pharetra. Nibh ipsum consequat nisl vel pretium lectus quam. Nisl tincidunt eget nullam non nisi est sit amet. Vel turpis nunc eget lorem dolor sed viverra. Metus dictum at tempor commodo ullamcorper a. At erat pellentesque adipiscing commodo. Lacinia at quis risus sed. Aliquet enim tortor at auctor. Sem et tortor consequat id porta nibh. Erat imperdiet sed euismod nisi porta lorem. Lacinia quis vel eros donec ac odio tempor orci. Ut morbi tincidunt augue interdum velit euismod in. Nisi vitae suscipit tellus mauris a diam maecenas. Sed viverra tellus in hac habitasse platea dictumst. Elit duis tristique sollicitudin nibh sit amet commodo nulla.

Ac feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper. Pulvinar mattis nunc sed blandit libero volutpat sed. Enim nulla aliquet porttitor lacus luctus accumsan tortor. Nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae. Vitae auctor eu augue ut lectus arcu bibendum at varius. Nam libero justo laoreet sit amet cursus. Tristique et egestas quis ipsum suspendisse ultrices gravida dictum fusce. Ut sem viverra aliquet eget. Lobortis scelerisque fermentum dui faucibus in ornare quam viverra. Mauris pellentesque pulvinar pellentesque habitant morbi. Enim nec dui nunc mattis enim ut. Adipiscing at in tellus integer feugiat scelerisque varius morbi enim. Rhoncus est pellentesque elit ullamcorper dignissim cras. Purus faucibus ornare suspendisse sed nisi. Augue eget arcu dictum varius duis at consectetur.

Purus sit amet volutpat consequat. Blandit libero volutpat sed cras ornare arcu dui vivamus. Quis ipsum suspendisse ultrices gravida dictum fusce ut placerat orci. Dui nunc mattis enim ut tellus elementum. Dictum fusce ut placerat orci. Nec tincidunt praesent semper feugiat nibh. Cursus in hac habitasse platea dictumst quisque sagittis. Sed cras ornare arcu dui vivamus arcu felis. Dolor sit amet consectetur adipiscing. Egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Dignissim convallis aenean et tortor at risus. Maecenas pharetra convallis posuere morbi leo urna molestie at. Sapien faucibus et molestie ac. Est ultricies integer quis auctor. Amet tellus cras adipiscing enim.

Odio morbi quis commodo odio aenean sed adipiscing. Arcu ac tortor dignissim convallis aenean et tortor. Risus nec feugiat in fermentum posuere urna nec tincidunt praesent. Varius duis at consectetur lorem. Id leo in vitae turpis massa. Dolor magna eget est lorem ipsum dolor sit amet. Dui faucibus in ornare quam. Duis ultricies lacus sed turpis. Auctor augue mauris augue neque. Venenatis lectus magna fringilla urna porttitor rhoncus. Donec et odio pellentesque diam. Accumsan lacus vel facilisis volutpat est velit egestas. A diam sollicitudin tempor id eu nisl nunc mi ipsum. Pellentesque massa placerat duis ultricies lacus. Imperdiet nulla malesuada pellentesque elit eget gravida cum. Egestas erat imperdiet sed euismod nisi porta lorem. Vel elit scelerisque mauris pellentesque.

Fames ac turpis egestas maecenas. Augue mauris augue neque gravida in fermentum et. Ultricies integer quis auctor elit. Et malesuada fames ac turpis egestas maecenas. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Porttitor massa id neque aliquam vestibulum morbi blandit cursus risus. Vel orci porta non pulvinar neque laoreet suspendisse. Enim eu turpis egestas pretium. Justo nec ultrices dui sapien eget mi proin sed. Quis varius quam quisque id diam. Nec ullamcorper sit amet risus nullam eget felis. Massa enim nec dui nunc mattis enim ut tellus. Ut eu sem integer vitae justo eget. Sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ut enim blandit volutpat maecenas volutpat. Pharetra pharetra massa massa ultricies mi quis. Nulla pharetra diam sit amet nisl suscipit. Lorem donec massa sapien faucibus et molestie. Condimentum id venenatis a condimentum. Non arcu risus quis varius quam.</string>
    <string name="hello_world">Hello World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="weathericon">WeatherIcon</string>
    <string name="last_update">"Last update: "</string>
    <string name="temperature">Temperature</string>
    <string name="city">City</string>
    <string name="no_data">No data</string>
    <string name="hanoi">Hanoi</string>
    <string name="paris">Paris</string>
    <string name="toulouse">Toulouse</string>
    <string name="weather_condition">Weather Condition</string>
</resources>