<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeatherAndForecastFragment" >

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/weatherCityNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tempView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:gravity="end"
            android:text="@string/city"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tempView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/temperature"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/weatherDetailsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tempView"
            android:layout_marginStart="10dp"
            android:text="@string/weather_condition"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lastUpdateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weatherDetailsView"
            android:layout_marginStart="10dp"
            android:text="@string/last_update"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/weatherbwcustom"/>
    </RelativeLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/noDataPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/no_data" />
    </GridLayout>
</LinearLayout>